[gd_scene load_steps=3 format=3 uid="uid://dmwdqnvuk8nbk"]

[ext_resource type="Script" path="res://menus/lobby_creator.gd" id="1_3c7gg"]
[ext_resource type="LabelSettings" uid="uid://dhbiycipdoc0d" path="res://menus/header_label_settings.tres" id="1_pgywf"]

[node name="LobbyCreator" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3c7gg")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PaddingLeft" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.325441, 0.325441, 0.325441, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -256.0
offset_right = 256.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PaddingTop" type="Control" parent="HBoxContainer/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="LabelLobbies" type="Label" parent="HBoxContainer/ColorRect/VBoxContainer/PaddingTop"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Lobbies"
label_settings = ExtResource("1_pgywf")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainerPrivacy" type="HBoxContainer" parent="HBoxContainer/ColorRect/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/ColorRect/VBoxContainer/VBoxContainer/HBoxContainerPrivacy"]
layout_mode = 2
text = "Password:"

[node name="CheckBox" type="CheckButton" parent="HBoxContainer/ColorRect/VBoxContainer/VBoxContainer/HBoxContainerPrivacy"]
layout_mode = 2

[node name="CheckButton" type="LineEdit" parent="HBoxContainer/ColorRect/VBoxContainer/VBoxContainer/HBoxContainerPrivacy"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="HBoxContainerPlayers" type="HBoxContainer" parent="HBoxContainer/ColorRect/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer/ColorRect/VBoxContainer/VBoxContainer/HBoxContainerPlayers"]
layout_mode = 2
text = "Players:"

[node name="ButtonIncrement" type="Button" parent="HBoxContainer/ColorRect/VBoxContainer/VBoxContainer/HBoxContainerPlayers"]
layout_mode = 2
text = "<"

[node name="Label" type="Label" parent="HBoxContainer/ColorRect/VBoxContainer/VBoxContainer/HBoxContainerPlayers"]
layout_mode = 2
text = "2"

[node name="ButtonDecrement" type="Button" parent="HBoxContainer/ColorRect/VBoxContainer/VBoxContainer/HBoxContainerPlayers"]
layout_mode = 2
text = ">"

[node name="ButtonCreateLobby" type="Button" parent="HBoxContainer/ColorRect/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Create Lobby"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ButtonMainMenu" type="Button" parent="HBoxContainer/ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="PaddingBottom" type="Control" parent="HBoxContainer/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="PaddingRight" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2

[connection signal="toggled" from="HBoxContainer/ColorRect/VBoxContainer/VBoxContainer/HBoxContainerPrivacy/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="HBoxContainer/ColorRect/VBoxContainer/HBoxContainer/ButtonMainMenu" to="." method="_on_button_main_menu_pressed"]
